[gd_scene load_steps=8 format=3 uid="uid://m6q8rh67ru1c"]

[ext_resource type="Script" path="res://scenes/ui/user_interface/user_interface.gd" id="1_vsf4i"]
[ext_resource type="Texture2D" uid="uid://ds2c374kw2h50" path="res://assets/textures/ui/vent.png" id="2_qqfse"]
[ext_resource type="Texture2D" uid="uid://cif6s0y35b7xi" path="res://assets/textures/ui/oblej.png" id="3_chfnj"]
[ext_resource type="Texture2D" uid="uid://h8ydultq6bpk" path="res://assets/textures/ui/sabotaz.png" id="4_ww8h1"]
[ext_resource type="Texture2D" uid="uid://b0wwwpxa645jv" path="res://assets/textures/ui/zglos.png" id="5_m7bia"]
[ext_resource type="Texture2D" uid="uid://djuqvjgi3pbno" path="res://assets/textures/ui/uzyj.png" id="6_57n6h"]
[ext_resource type="Texture2D" uid="uid://c3krnig4q8qwh" path="res://assets/textures/ui/menu_settings.png" id="8_5be7m"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_vsf4i")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1119.0
offset_top = -740.0
offset_right = -9.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(1100, 730)
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="Filler" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2

[node name="VentButton" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_qqfse")

[node name="FailButton" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_chfnj")

[node name="FailLabel" type="Label" parent="GridContainer/FailButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 192
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SabotageButton" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_ww8h1")

[node name="SabotageLabel" type="Label" parent="GridContainer/SabotageButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 192
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReportButton" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_m7bia")

[node name="InteractButton" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_57n6h")

[node name="GridContainer2" type="GridContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -376.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 368.0
grow_horizontal = 0
scale = Vector2(0.18, 0.18)
pivot_offset = Vector2(360, 0)
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="PauseButton" type="TextureButton" parent="GridContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_5be7m")

[connection signal="button_down" from="GridContainer/VentButton" to="." method="_on_vent_button_button_down"]
[connection signal="button_down" from="GridContainer/FailButton" to="." method="_on_fail_button_button_down"]
[connection signal="button_down" from="GridContainer/SabotageButton" to="." method="_on_sabotage_button_button_down"]
[connection signal="button_down" from="GridContainer/ReportButton" to="." method="_on_report_button_button_down"]
[connection signal="button_down" from="GridContainer/InteractButton" to="." method="_on_interact_button_button_down"]
[connection signal="button_down" from="GridContainer2/PauseButton" to="." method="_on_pause_button_button_down"]
